Update to VuFind 9